# rust-simple-calculator

./: Cargo.toml  README.md
examples/: basic_usage.rs
src/: calculator.rs  error.rs  lib.rs  main.rs  mod.rs  operations.rs  parser.rs  ui.rs
tests/: calculator_test.rs  operations_test.rs  parser_test.rs
